<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

    <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/login_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_nome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_title" />

    <EditText
            android:id="@+id/login_et_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_et_nome"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_nome" />

    <TextView
            android:id="@+id/login_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_senha"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_et_nome" />

    <EditText
            android:id="@+id/login_et_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_et_senha"
            android:inputType="textPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_senha" />

</android.support.constraint.ConstraintLayout>