<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:id="@+id/register_header"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@android:color/holo_blue_dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/register_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_header_title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


    </android.support.constraint.ConstraintLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/register_header">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

            <TextView
                    android:id="@+id/register_title_telephone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_title_telephone"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <View
                    android:id="@+id/register_line_one"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/black"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_title_telephone" />

            <EditText
                    android:id="@+id/register_et_number_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/example_numer_telephone"
                    android:inputType="number"
                    app:layout_constraintTop_toBottomOf="@id/register_line_one" />

            <TextView
                    android:id="@+id/register_tv_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_tv_one"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_et_number_primary" />

            <View
                    android:id="@+id/register_subview_one"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_tv_one" />

            <EditText
                    android:id="@+id/register_et_number_secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/register_title_telephone"
                    android:inputType="number"
                    app:layout_constraintTop_toBottomOf="@id/register_subview_one" />

            <TextView
                    android:id="@+id/register_tv_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_tv_two"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_et_number_secondary" />


            <TextView
                    android:id="@+id/register_title_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/register_title_email"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_tv_two" />

            <View
                    android:id="@+id/register_line_two"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/black"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_title_email" />

            <EditText
                    android:id="@+id/register_et_email_primary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/register_example_email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintTop_toBottomOf="@id/register_line_two" />

            <TextView
                    android:id="@+id/register_tv_email_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_tv_email_one"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_et_email_primary" />

            <View
                    android:id="@+id/register_subview_two"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_tv_email_one" />

            <EditText
                    android:id="@+id/register_et_email_secondary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:hint="@string/register_example_email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintTop_toBottomOf="@id/register_subview_two" />

            <TextView
                    android:id="@+id/register_tv_email_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_tv_email_two"
                    android:textSize="15sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/register_et_email_secondary" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>